--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "liveReload": "webpack-dev-server --open",
+    "start": "node server/server.js"
   },
   "author": "Vova",
   "license": "ISC",
